syntax = "proto3";

package ubertool.trusted.api.v1;

option go_package = "ubertool-backend-trusted/api/gen/v1;ubertool_v1";


option java_multiple_files = true;
option java_package = "com.ubertool.trusted.api.v1";
option java_outer_classname = "RentalServiceProto";

// Rental service
service RentalService {
  // Create rental request (renter)
  rpc CreateRentalRequest(CreateRentalRequestRequest) returns (CreateRentalRequestResponse);

  // Approve rental request (owner)
  rpc ApproveRentalRequest(ApproveRentalRequestRequest) returns (ApproveRentalRequestResponse);

  // Reject rental request (owner)
  rpc RejectRentalRequest(RejectRentalRequestRequest) returns (RejectRentalRequestResponse);

  // Finalize approved rental request (renter)
  rpc FinalizeRentalRequest(FinalizeRentalRequestRequest) returns (FinalizeRentalRequestResponse);

  // Activate rental - mark as picked up and in use (both sides)
  rpc ActivateRental(ActivateRentalRequest) returns (ActivateRentalResponse);

  // Change rental dates (both sides, behavior depends on status and role)
  rpc ChangeRentalDates(ChangeRentalDatesRequest) returns (ChangeRentalDatesResponse);

  // Approve return date change (owner only, for RETURN_DATE_CHANGED status)
  rpc ApproveReturnDateChange(ApproveReturnDateChangeRequest) returns (ApproveReturnDateChangeResponse);

  // Reject return date change (owner only, for RETURN_DATE_CHANGED status)
  rpc RejectReturnDateChange(RejectReturnDateChangeRequest) returns (RejectReturnDateChangeResponse);

  // Acknowledge return date change rejection (renter only, for RETURN_DATE_CHANGE_REJECTED status)
  rpc AcknowledgeReturnDateRejection(AcknowledgeReturnDateRejectionRequest) returns (AcknowledgeReturnDateRejectionResponse);

  // Cancel return date change (renter only, for RETURN_DATE_CHANGED status)
  rpc CancelReturnDateChange(CancelReturnDateChangeRequest) returns (CancelReturnDateChangeResponse);

  // Cancel rental (renter)
  rpc CancelRental(CancelRentalRequest) returns (CancelRentalResponse);

  // Complete rental (mark as returned, owner only)
  rpc CompleteRental(CompleteRentalRequest) returns (CompleteRentalResponse);

  // Get rental details (both sides)
  rpc GetRental(GetRentalRequest) returns (GetRentalResponse);

  // List lendings (owner)
  rpc ListMyLendings(ListMyLendingsRequest) returns (ListRentalsResponse);

  // List rentals (renter)
  rpc ListMyRentals(ListMyRentalsRequest) returns (ListRentalsResponse);

  // List rentals for a specific tool (owner)
  rpc ListToolRentals(ListToolRentalsRequest) returns (ListRentalsResponse);
}

// Create rental request
message CreateRentalRequestRequest {
  int32 tool_id = 1;
  string start_date = 2; // Date string YYYY-MM-DD
  string end_date = 3; // Date string YYYY-MM-DD
  int32 organization_id = 4;
}

// Create rental request response
message CreateRentalRequestResponse {
  RentalRequest rental_request = 1;
}

// Approve rental request
message ApproveRentalRequestRequest {
  int32 request_id = 1;
  string pickup_instructions = 2;
}

// Approve rental request response
message ApproveRentalRequestResponse {
  RentalRequest rental_request = 1;
}

// Reject rental request
message RejectRentalRequestRequest {
  int32 request_id = 1;
  string reason = 2;
}

// Reject rental request response
message RejectRentalRequestResponse {
  bool success = 1;
  RentalRequest rental_request = 2;
}

message CancelRentalRequest {
  int32 request_id = 1;
  string reason = 2;
}
message CancelRentalResponse {
  bool success = 1;
  RentalRequest rental_request = 2;
}

// Complete rental
message CompleteRentalRequest {
  int32 request_id = 1;
  string return_condition = 2; // Optional condition note for the returned tool
  int32 surcharge_or_credit_cents = 3; // Optional fee or credit for late return, damage, or early return
  string notes = 4; // Optional notes for the rental
}

// Complete rental response
message CompleteRentalResponse {
  RentalRequest rental_request = 1;
}

// Get rental request
message GetRentalRequest {
  int32 request_id = 1;
}

// Get rental response
message GetRentalResponse {
  RentalRequest rental_request = 1;
}

// List my rentals request
message ListMyRentalsRequest {
  int32 organization_id = 1;           // Organization context
  repeated RentalStatus status = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// List my rentals response
message ListRentalsResponse {
  repeated RentalRequest rentals = 1;
  int32 total_count = 2;
}

// List my lendings request
message ListMyLendingsRequest {
  int32 organization_id = 1;           // Organization context
  repeated RentalStatus status = 2;             // Filter by status (optional, 0 = all)
  int32 page = 3;
  int32 page_size = 4;
}

// List tool rentals request (for rental history of a specific tool)
message ListToolRentalsRequest {
  int32 tool_id = 1;                   // Tool ID to get rental history for
  int32 organization_id = 2;           // Organization context
  repeated RentalStatus status = 3;             // Filter by status (optional, 0 = all)
  int32 page = 4;
  int32 page_size = 5;
}

message FinalizeRentalRequestRequest {
  int32 request_id = 1;
  int32 user_id = 2;
}

message FinalizeRentalRequestResponse {
  RentalRequest rental_request = 1;
  repeated RentalRequest approved_rentals = 2;
  repeated RentalRequest pending_rentals = 3;
}

// Activate rental (pickup)
message ActivateRentalRequest {
  int32 request_id = 1;
}

message ActivateRentalResponse {
  RentalRequest rental_request = 1;
}

// Change rental dates
message ChangeRentalDatesRequest {
  int32 request_id = 1;
  string new_start_date = 2; // YYYY-MM-DD (optional if only changing end date)
  string new_end_date = 3;   // YYYY-MM-DD
  string old_start_date = 4; // YYYY-MM-DD (for return date change tracking)
  string old_end_date = 5;   // YYYY-MM-DD (for return date change tracking)
}

message ChangeRentalDatesResponse {
  RentalRequest rental_request = 1;
}

// Approve return date change (owner)
message ApproveReturnDateChangeRequest {
  int32 request_id = 1;
}

message ApproveReturnDateChangeResponse {
  RentalRequest rental_request = 1;
}

// Reject return date change (owner)
message RejectReturnDateChangeRequest {
  int32 request_id = 1;
  string reason = 2;
  string new_end_date = 3;
}

message RejectReturnDateChangeResponse {
  RentalRequest rental_request = 1;
}

// Acknowledge return date change rejection (renter)
message AcknowledgeReturnDateRejectionRequest {
  int32 request_id = 1;
}

message AcknowledgeReturnDateRejectionResponse {
  RentalRequest rental_request = 1;
}

// Cancel return date change (renter)
message CancelReturnDateChangeRequest {
  int32 request_id = 1;
}

message CancelReturnDateChangeResponse {
  RentalRequest rental_request = 1;
}


// Rental request message
message RentalRequest {
  int32 id = 1;
  int32 tool_id = 2;
  string tool_name = 3;
  int32 renter_id = 4;
  string renter_name = 5;
  int32 owner_id = 6;
  string owner_name = 7;
  int32 organization_id = 8;
  string start_date = 9; // Date string YYYY-MM-DD
  string end_date = 10; // Date string YYYY-MM-DD
  int32 total_cost_cents = 11;
  RentalStatus status = 12;
  string pickup_instructions = 13;
  string created_on = 14; // Date string YYYY-MM-DD
  string updated_on = 15; // Date string YYYY-MM-DD
  string return_condition = 16; // Condition note when tool was returned
  int32 surcharge_or_credit_cents = 17; // Surcharge or credit applied at completion
  string durationUnit = 18; // Unit of rental duration (e.g. "day", "week")
  int32 daily_price_cents = 19; // Daily rental rate in cents
  int32 weekly_price_cents = 20; // Weekly rental rate in cents
  int32 monthly_price_cents = 21; // Monthly rental rate in cents
  int32 replacement_cost_cents = 22; // Replacement cost for the tool in cents
  string organization_name = 23; // Name of the organization context for this rental
  string tool_condition = 24; // Tool condition string e.g. "EXCELLENT", "GOOD", "ACCEPTABLE", "DAMAGED__NEEDS_REPAIR"
  string renter_phone = 25; // Phone number of the renter (visible to owner)
  string owner_phone = 26; // Phone number of the owner (visible to renter)
}

// Rental status enum
enum RentalStatus {
  RENTAL_STATUS_UNSPECIFIED = 0;
  RENTAL_STATUS_PENDING = 1;
  RENTAL_STATUS_APPROVED = 2;
  RENTAL_STATUS_SCHEDULED = 3;
  RENTAL_STATUS_ACTIVE = 4;
  RENTAL_STATUS_COMPLETED = 5;
  RENTAL_STATUS_CANCELLED = 6;
  RENTAL_STATUS_OVERDUE = 7;
  RENTAL_STATUS_RETURN_DATE_CHANGED = 8;
  RENTAL_STATUS_RETURN_DATE_CHANGE_REJECTED = 9;
  RENTAL_STATUS_REJECTED = 10;
}

